--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
     </div>
 
     <script type="text/javascript" src="js/love.js"></script>
-
+ 
+    <div id="love-text" style="display:none; text-align:center; font-size:2em; color:#c40908; margin-top:20px;">
+    I Love You
+    </div>
+   
 </body>
 
 </html>
