--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
             </div>
         </div>
     </div>
+    
+
+    <div id="love-text" style="
+    display: none;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 2em;
+    color: #c40908;
+    font-family: sans-serif;
+    z-index: 100;
+">
+    I Love You
+</div>
 
     <div class="footer">
         <div class="border">
@@ -39,10 +54,7 @@
             <div class="border-bottom"></div>
         </div>
     </div>
-    
-     <div id="love-text" style="display:none; text-align:center; font-size:2em; color:#c40908; margin-top:20px;">
-    I Love You
-    </div>
+
     <script type="text/javascript" src="js/love.js"></script>
    
 </body>
