--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <title>Dear Sun</title>
     <meta name="language" content="en-US">
     <meta name="title" content="Dear Sun">
@@ -34,18 +35,21 @@
     </div>
     
 
-    <div id="love-text" style="
+<div id="love-text" style="
     display: none;
     position: absolute;
     top: 70%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 2em;
-    color: #c40908;
-    font-family: sans-serif;
+    font-size: 3em;
+    color: #e91e63;
+    font-family: 'Great Vibes', cursive;
     z-index: 100;
+    opacity: 0;
+    transition: opacity 2s ease;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.2);
 ">
-    I Love You
+    ❤️ I Love You ❤️
 </div>
 
     <div class="footer">
