--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <title>Dear Sun</title>
     <meta name="language" content="en-US">
     <meta name="title" content="Dear Sun">
@@ -43,7 +43,7 @@
     transform: translateX(-50%);
     font-size: 3em;
     color: #e91e63;
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Handlee', cursive;
     z-index: 100;
     opacity: 0;
     transition: opacity 2s ease;
