--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
 <div id="love-text" style="
     display: none;
     position: absolute;
-    top: 70%;
+    top: 72%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 3em;
-    color: #e91e63;
+    font-size: 4.5em;
+    color: #ff3e6c;
     font-family: 'Handlee', cursive;
     z-index: 100;
     opacity: 0;
     transition: opacity 2s ease;
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+    text-shadow:
+        1px 1px 2px #f28ca1,
+        2px 2px 4px rgba(0,0,0,0.2);
+    animation: pulse 2s ease-in-out infinite alternate;
 ">
     ❤️ I Love You ❤️
 </div>
