--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <title>Dear Sun</title>
     <meta name="language" content="en-US">
@@ -43,7 +44,7 @@
     transform: translateX(-50%);
     font-size: 4.5em;
     color: #ff3e6c;
-    font-family: 'Handlee', cursive;
+    font-family: 'Pacifico', cursive;
     z-index: 100;
     opacity: 0;
     transition: opacity 2s ease;
