--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     top: 72%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 4.5em;
+    font-size: clamp(2em, 5vw, 3.5em);
     color: #ff3e6c;
     font-family: 'Pacifico', cursive;
     z-index: 100;
