--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     transform: translateX(-50%);
     font-size: clamp(2em, 5vw, 3.5em);
     color: #ff3e6c;
-    font-family: 'Pacifico', cursive;
+    font-family: ''Handlee', cursive;
     z-index: 100;
     opacity: 0;
     transition: opacity 2s ease;
